--- a/src/App.scss
+++ b/src/App.scss
@@ -16,3 +16,18 @@
   display: flex;
   flex-direction: column;
 }
+
+main {
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+
+  @include tablet {
+    padding: 0 $tablet-padding;
+  }
+
+  @include desktop {
+    padding: 0 $desktop-padding;
+    flex-direction: row;
+  }
+}
