--- a/src/components/NextVideosList/NextVideosList.scss
+++ b/src/components/NextVideosList/NextVideosList.scss
@@ -1,3 +1,43 @@
 @use "../../styles/partials/fonts" as *;
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
+
+.next-videos-list {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  padding-top: 1rem;
+  padding-bottom: 2.5rem;
+
+  @include tablet {
+    padding-top: 1.5rem;
+  }
+
+  @include desktop {
+    padding-top: 2.25rem;
+    padding-bottom: $desktop-padding;
+  }
+
+  &__title {
+    font-size: 0.938rem;
+    font-weight: 600;
+    color: $pri-silver;
+
+    @include tablet {
+      font-size: 0.844rem;
+      padding-bottom: 0.4rem;
+    }
+
+    @include desktop {
+      font-size: 0.78rem;
+      padding-bottom: 0;
+    }
+  }
+
+  &__body {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+  }
+}
