--- a/src/components/NextVideo/NextVideo.scss
+++ b/src/components/NextVideo/NextVideo.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   padding-top: 1rem;
+  cursor: pointer;
 
   @include tablet {
     padding-top: $tablet-space-between;
