--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -3,14 +3,14 @@
 
 .avatar {
   background-color: $sec-mercury;
-  width: 2.25rem;
-  height: 2.25rem;
-  min-width: 2.25rem;
-  min-height: 2.25rem;
+  width: 2.75rem;
+  height: 2.75rem;
+  min-width: 2.75rem;
+  min-height: 2.75rem;
   border-radius: 50%;
   overflow: hidden;
 
-  @include tablet {
+  @include desktop {
     width: 2.5rem;
     height: 2.5rem;
     min-width: 2.5rem;
