--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,32 +6,55 @@
   position: relative;
   width: 100%;
   box-sizing: content-box;
+  cursor: pointer;
 
   @include tablet {
-    width: 9rem;
+    width: 10.38rem;
+  }
+
+  @include desktop {
+    width: 9.4rem;
   }
 
   &__icon {
     position: absolute;
-    left: 0.5rem;
+    left: 0.85rem;
     top: 50%;
     transform: translateY(-50%);
-    height: 1.1rem;
+    height: 1.35rem;
+
+    @include tablet {
+      left: 0.7rem;
+      height: 1.2rem;
+    }
+
+    @include desktop {
+      height: 1.1rem;
+    }
   }
 
   &__button {
     width: 100%;
-    min-height: 2.5rem;
-    color: $pri-white;
+    min-height: 2.8rem;
     background-color: $pri-blue;
+    color: $pri-white;
     border: none;
     border-radius: 0.25rem;
     text-transform: uppercase;
+    font-weight: 600;
+    font-size: 0.92rem;
     padding: 0 2rem;
+
+    @include tablet {
+      font-size: 0.82rem;
+    }
+
+    @include desktop {
+      font-size: 0.8rem;
+    }
 
     &:hover {
       background-color: $sec-darkblue;
-      cursor: pointer;
     }
   }
 }
