--- a/src/components/NextVideosList/NextVideosList.scss
+++ b/src/components/NextVideosList/NextVideosList.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  padding-top: 1rem;
+  padding-top: 1.4rem;
   padding-bottom: 2.5rem;
 
   @include tablet {
@@ -15,6 +15,7 @@
 
   @include desktop {
     padding-top: 2.25rem;
+    padding-left: 1.5rem;
     padding-bottom: $desktop-padding;
   }
 
