--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -17,5 +17,13 @@
   video {
     width: 100%;
     height: 100%;
+
+    @include tablet {
+      height: 105.5%;
+    }
+
+    @include desktop {
+      height: 96.5%;
+    }
   }
 }
