--- a/src/App.scss
+++ b/src/App.scss
@@ -16,17 +16,9 @@
   display: flex;
   flex-direction: column;
 
-  &__main {
-    padding: 0 1.2rem;
-
-    @include tablet {
-      padding: 0 2.4rem;
-    }
-
-    @include desktop {
-      padding: 0 1rem;
-      display: flex;
-      flex-direction: row;
-    }
+  &__container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: auto;
   }
 }
