--- a/src/components/CommentSection/CommentSection.scss
+++ b/src/components/CommentSection/CommentSection.scss
@@ -30,10 +30,6 @@
   &__avatar {
     padding-top: 1.4rem;
 
-    @include tablet {
-      padding-top: 1.7rem;
-    }
-
     @include desktop {
       padding-top: 1.3rem;
       padding-left: 0.6rem;
@@ -91,7 +87,7 @@
         padding: 1rem;
         height: 2.8rem;
         width: 80%;
-        min-height: 2.5rem;
+        height: 2.5rem;
         margin-right: 1.65rem;
         margin-bottom: 0;
       }
