--- a/src/components/CommentSection/CommentSection.scss
+++ b/src/components/CommentSection/CommentSection.scss
@@ -71,47 +71,47 @@
       flex-direction: row;
       align-items: center;
     }
+  }
 
-    textarea {
-      background-color: $sec-alabaster;
-      font-family: "AvenirNextLTPro";
-      font-size: 0.98rem;
-      padding: 0.75rem;
-      border: 0.063rem solid $sec-mercury;
-      border-radius: 0.25rem;
-      height: 7.5rem;
-      margin-bottom: 1.2rem;
-      resize: none;
+  &__textarea {
+    background-color: $sec-alabaster;
+    font-family: "AvenirNextLTPro";
+    font-size: 0.98rem;
+    padding: 0.75rem;
+    border: 0.063rem solid $sec-mercury;
+    border-radius: 0.25rem;
+    height: 7.5rem;
+    margin-bottom: 1.2rem;
+    resize: none;
 
-      @include tablet {
-        padding: 1rem;
-        height: 2.8rem;
-        width: 80%;
-        height: 2.5rem;
-        margin-right: 1.65rem;
-        margin-bottom: 0;
-      }
-
-      @include desktop {
-        width: 74%;
-        font-size: 0.87rem;
-      }
-
-      &:active,
-      &:focus {
-        border: 0.063rem solid $pri-blue;
-        outline: none;
-      }
+    @include tablet {
+      padding: 1rem;
+      width: 80%;
+      height: 3rem;
+      margin-right: 1.65rem;
+      margin-bottom: 0;
     }
 
-    ::placeholder {
-      color: $pri-black;
-      font-family: "AvenirNextLTPro";
-      font-size: 0.98rem;
+    @include desktop {
+      width: 74%;
+      font-size: 0.87rem;
+      height: 2.5rem;
+    }
 
-      @include desktop {
-        font-size: 0.87rem;
-      }
+    &:active,
+    &:focus {
+      border: 0.063rem solid $pri-blue;
+      outline: none;
+    }
+  }
+
+  ::placeholder {
+    color: $pri-black;
+    font-family: "AvenirNextLTPro";
+    font-size: 0.98rem;
+
+    @include desktop {
+      font-size: 0.87rem;
     }
   }
 }
