--- a/src/pages/Upload/Upload.scss
+++ b/src/pages/Upload/Upload.scss
@@ -6,35 +6,32 @@
   border-top: 1px solid $sec-mercury;
   display: flex;
   flex-direction: column;
-  padding: 1.5rem 1rem;
-  font-size: 13px;
-  line-height: 18px;
+  padding: 1.5rem 1.2rem 2.5rem 1.2rem;
 
   @include tablet {
     padding: $tablet-padding $tablet-padding;
-    font-size: 14px;
-    line-height: 22px;
   }
 
   @include desktop {
     align-self: center;
-    padding-right: $desktop-padding;
-    padding-left: $desktop-padding;
+    padding: 2rem 8rem;
+    margin-bottom: 18rem;
     width: 100%;
   }
 
   &__title {
     display: flex;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 1.8rem;
     font-weight: 700;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1.8rem;
 
     @include tablet {
-      padding-bottom: $tablet-space-between;
       border-bottom: 1px solid $sec-mercury;
-      font-size: 33px;
-      line-height: 44px;
+      font-size: 2.18rem;
+    }
+
+    @include desktop {
+      font-size: 2rem;
     }
   }
 
@@ -47,14 +44,11 @@
     display: flex;
     flex-direction: column;
 
-    @include tablet {
-      border-bottom: 1px solid $sec-mercury;
-    }
-
     @include desktop {
       flex-direction: row;
       width: 100%;
-      padding-bottom: $tablet-space-between;
+      border-bottom: 1px solid $sec-mercury;
+      padding-bottom: 0.66rem;
     }
   }
 
@@ -67,14 +61,14 @@
   }
 
   &__thumbnail-title {
-    margin: 0;
-    padding-bottom: 0.25rem;
+    padding-bottom: 0.5rem;
     font-weight: 600;
+    font-size: 0.93rem;
     color: $pri-silver;
 
     @include tablet {
-      font-size: 12px;
-      line-height: 20px;
+      font-size: 0.825rem;
+      margin-top: 2rem;
     }
   }
 
@@ -82,14 +76,15 @@
     width: 100%;
     border-radius: 4px;
     background-color: $sec-mercury;
+    margin-bottom: 1.3rem;
 
     @include tablet {
       width: 50%;
     }
 
     @include desktop {
-      height: 200px;
-      width: auto;
+      height: 183px;
+      width: 480px;
     }
   }
 
@@ -103,25 +98,45 @@
 
     @include desktop {
       padding-left: $tablet-space-between;
+      padding-top: 2rem;
       width: 100%;
       border: none;
-      justify-content: space-between;
+    }
+  }
+
+  &__input-label {
+    padding-bottom: 0.25rem;
+    font-weight: 600;
+    color: $pri-silver;
+    font-size: 0.935rem;
+
+    @include tablet {
+      font-size: 0.8rem;
+      padding-bottom: 0.5rem;
+    }
+
+    @include desktop {
+      font-size: 0.77rem;
     }
   }
 
   &__input-title,
   &__input-description {
     background-color: $sec-alabaster;
-    padding: 0.75rem;
     border: 1px solid $sec-mercury;
+    padding: 0.8rem;
     border-radius: 4px;
     box-sizing: border-box;
-    margin-bottom: 1rem;
     font-family: "AvenirNextLTPro";
+    font-size: 1rem;
 
     @include tablet {
-      padding: 1.5rem;
-      min-height: 2.5rem;
+      padding: 0.88rem;
+      font-size: 0.935rem;
+    }
+
+    @include desktop {
+      font-size: 0.86rem;
     }
 
     &:active,
@@ -135,12 +150,13 @@
     }
   }
 
-  &__input-title {
-    height: 2.5rem;
+  ::placeholder {
+    color: $pri-black;
+  }
 
-    @include tablet {
-      margin-bottom: 1rem;
-    }
+  &__input-title {
+    height: 3rem;
+    margin-bottom: 1rem;
 
     @include desktop {
       margin-bottom: 1.5rem;
@@ -149,10 +165,16 @@
 
   &__input-description {
     resize: none;
-    height: 100%;
-    min-height: 6.25rem;
+    height: 6.8rem;
+    margin-bottom: 1.8rem;
+
+    @include tablet {
+      margin-bottom: 1.5rem;
+    }
+
     @include desktop {
       margin-bottom: 0;
+      height: 5.5rem;
     }
   }
 
@@ -160,6 +182,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+
     @include tablet {
       flex-direction: row;
       align-items: baseline;
@@ -169,19 +192,22 @@
   }
 
   &__cancel {
-    min-height: 2.5rem;
     color: $pri-blue;
     background-color: $pri-white;
     border: none;
-    border-radius: 4px;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
+    font-weight: 600;
+    font-size: 0.85rem;
     cursor: pointer;
 
     @include tablet {
-      margin-top: $tablet-space-between;
-      margin-right: $tablet-space-between;
+      margin-top: 2.7rem;
+      margin-right: 4.5rem;
+      font-size: 0.8rem;
+    }
+
+    @include desktop {
+      margin-right: 4.2rem;
     }
   }
 
@@ -198,6 +224,7 @@
     background: lightgreen;
     box-shadow: 0 0 10px green;
     padding: 20px;
+    border-radius: 5px;
     text-align: center;
     width: 100%;
   }
