--- a/src/components/CommentItem/CommentItem.scss
+++ b/src/components/CommentItem/CommentItem.scss
@@ -76,4 +76,18 @@
       font-size: 0.865rem;
     }
   }
+
+  &__button-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  &__button {
+    border: none;
+    background-color: transparent;
+    height: 2.2rem;
+    width: 2.2rem;
+    cursor: pointer;
+  }
 }
