Deleted JSON files from previous sprints, revised styles according to sprint 2 feedback.

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,6 +4,7 @@
 .video-page {
   display: flex;
   flex-direction: column;
+  font-family: "AvenirNextLTPro";
 
   @include desktop {
     display: flex;
