--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  font-family: "AvenirNextLTPro";
 
   @include tablet {
     flex-direction: row;
