--- a/src/pages/Upload/Upload.scss
+++ b/src/pages/Upload/Upload.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   padding: 1.5rem 1.2rem 2.5rem 1.2rem;
+  font-family: "AvenirNextLTPro";
 
   @include tablet {
     padding: $tablet-padding $tablet-padding;
@@ -208,6 +209,10 @@
 
     @include desktop {
       margin-right: 4.2rem;
+    }
+
+    &:hover {
+      text-decoration: underline;
     }
   }
 
